fixed input text align

--- a/jquery.input-placeholder.css
+++ b/jquery.input-placeholder.css
@@ -15,6 +15,7 @@
 	position: relative;
 	z-index:1;
 	margin: 0;
+	vertical-align: top;
 }
 
 .jquery-input-default-wrapper .jquery-input-default-placeholder{
